# plant-care

./: .env  Dockerfile  README.md  app.config.js  app.json  build.sh  compose.yml  config.tsx  declarations.d.ts  package-lock.json  package.json  pom.xml  pyproject.toml  withCleartextTraffic.js
app/: _layout.tsx
app/(tabs)/: _layout.tsx  dashboard.tsx  gsetting.tsx  index.tsx  profile.tsx  reminder.tsx  setting.tsx  test.tsx
app/auth/: forgot.tsx  onboarding.tsx  signin.tsx  signup.tsx  waiting.tsx
assets/animation/: auto.json  chicken.json  farm.json  loading.json
assets/fonts/: colors.tsx  font.tsx
auth-service/: Dockerfile  README.md  docker-compose.yml  docs.md  go.mod  go.sum  main.go
database/: .env_template  Dockerfile  auth.mongodb.js  docker-compose.yml  docs.md  schema.sql
iot-db/: Dockerfile  init.js
iot-service/: Dockerfile  compose.yml  pyproject.toml
iot-service/src/: main.py
iot-service/src/api/: models.py  routes.py
iot-service/src/config/: logging_config.py  settings.py
iot-service/src/db/: __init__.py  models.py  repository.py
iot-service/src/iot-services/: main.py
iot-service/src/iot-services/api/: __init__.py  models.py  routes.py
iot-service/src/iot-services/config/: logging_config.py  settings.py
iot-service/src/iot-services/db/: __init__.py  models.py  repository.py
iot-service/src/iot-services/mqtt/: __init__.py  client.py  handlers.py
iot-service/src/mqtt/: client.py  handlers.py
mobile-app/: package.json
mobile-core/: docker-compose.yaml  pom.xml
mqtt-server/: Dockerfile
src/: main.py
(+147 files in other folders)
