[project]
name = "ml-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "joblib>=1.4.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pymongo>=4.12.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
]
